# carina

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  example.crn  release.toml
carina-aws-types/: Cargo.toml
carina-aws-types/src/: lib.rs
carina-cli/: Cargo.toml  build.rs
carina-cli/examples/: plan-fixture.rs
carina-cli/src/: cli_version_tests.rs  cursor.rs  display.rs  error.rs  fixture_plan.rs  kms.rs  legacy_name_overrides.rs  lib.rs  main.rs  module_info_snapshot_tests.rs  module_list_tests.rs  plan_snapshot_tests.rs  provider_resolver.rs  signal.rs  tests.rs  version_resolver.rs  wiring.rs
carina-cli/src/commands/: apply.rs  destroy.rs  docs.rs  export.rs  fmt.rs  iam_preflight.rs  init.rs  lint.rs  migrate_state.rs  mod.rs  module.rs  plan.rs  skills.rs  state.rs  validate.rs
carina-cli/src/display/: mod.rs  tests.rs
carina-cli/src/snapshots/: carina__module_info_snapshot_tests__snapshot_module_info.snap  carina__module_info_snapshot_tests__snapshot_module_info_empty_module.snap  carina__module_info_snapshot_tests__snapshot_module_info_no_deps.snap  carina__module_list_tests__snapshot_module_list_with_imports.snap  carina__plan_snapshot_tests__plan_snapshot_exports.snap  carina__plan_snapshot_tests__plan_snapshot_remote_state.snap  carina__plan_snapshot_tests__snapshot_all_create.snap  carina__plan_snapshot_tests__snapshot_compact.snap  carina__plan_snapshot_tests__snapshot_default_tags.snap  carina__plan_snapshot_tests__snapshot_default_values.snap  carina__plan_snapshot_tests__snapshot_deferred_for.snap  carina__plan_snapshot_tests__snapshot_delete_orphan.snap  carina__plan_snapshot_tests__snapshot_destroy_full.snap  carina__plan_snapshot_tests__snapshot_destroy_orphans.snap  (+90 more)
carina-cli/tests/: apply_cbd_consumer_ordering_e2e.rs  apply_dbc_create_failure_cleanup_e2e.rs  apply_dbd_create_failure_cleanup_e2e.rs  apply_deferred_replace_consumer_ordering_e2e.rs  apply_deferred_replace_writeback_e2e.rs  apply_parallelism.rs  apply_persists_state_migration.rs  backend_drift_gate.rs  composition_binding_resolve_e2e.rs  deferred_populate_validate_e2e.rs  destroy_wait_ordering_e2e.rs  e2e_typecheck_parity.rs  enum_error_display_snapshot.rs  init_migrate_state_e2e.rs  init_validation.rs  kms_decryptor_winterbaume.rs  negative_validation.rs  nested_module_call_ref_e2e.rs  partial_create_e2e.rs  partial_update_e2e.rs  plan_fixture_example.rs  plan_refresh_cursor_hide_pty.rs  plan_refresh_separator_e2e.rs  plan_refresh_separator_pty.rs  plan_state_anchoring_e2e.rs  plan_state_drift_e2e.rs  plan_state_migration_warning_once.rs  provider_upstream_state_e2e.rs  share_provider_attrs.rs  state_lookup_modules_exports_e2e.rs  state_url_e2e.rs  state_value_round_trip.rs  validate_deferred_for_enumeration_e2e.rs  validate_single_quote_warning.rs  validate_unknown_custom_type_e2e.rs  virtual_binding_resolve_e2e.rs  wait_apply_module_path.rs  wait_validate_e2e.rs
carina-codegen-aws/: Cargo.toml
carina-codegen-aws/src/: main.rs  resource_defs.rs
carina-core/: Cargo.toml
carina-core/src/: binding_index.rs  binding_index_split_tests.rs  builtins.rs  config_loader.rs  deps.rs  detail_rows.rs  diff_helpers.rs  differ.rs  effect.rs  eval_value.rs  executor.rs  explicit.rs  heredoc.rs  identifier.rs  interpreter.rs  keywords.rs  lib.rs  lint.rs  module.rs  module_resolver.rs  name_override.rs  non_empty.rs  override_aware.rs  plan.rs  plan_tree.rs  provider.rs  resolver.rs  resolver_split_tests.rs  resource.rs  schema.rs  upstream_exports.rs  utils.rs  validation.rs  value.rs  version_constraint.rs
carina-core/tests/: canonicalize_invariants.rs  carina3122_live_phantom.rs  cyclic_schema_ref.rs  depends_on_directory.rs  fmt_infra_smoke.rs  pest_grammar_parity.rs  tmlanguage_keyword_parity.rs  wait_directory.rs  wait_downstream_apply.rs
carina-lsp/: Cargo.toml
carina-lsp/src/: backend.rs  code_action.rs  completion.rs  diagnostics.rs  document.rs  hover.rs  let_parse.rs  lib.rs  main.rs  position.rs  semantic_tokens.rs  workspace.rs
carina-lsp/tests/: e2e_typecheck.rs  lsp_completion_struct.rs  lsp_diagnostics.rs  lsp_enum_code_action.rs  lsp_initialize.rs  lsp_integration.rs  lsp_use_stmt.rs
carina-plugin-host/: Cargo.toml
carina-plugin-host/examples/: precompile-mock-fixture.rs
carina-plugin-host/src/: convert.rs  factory.rs  lib.rs  normalizer.rs  process.rs  provider.rs  wasm_convert.rs  wasm_factory.rs
carina-plugin-host/tests/: mock_process_integration.rs  protocol_version.rs  wasm_error_reporting_test.rs  wasm_integration_test.rs  wasm_precompile_test.rs
carina-plugin-sdk/: Cargo.toml
carina-plugin-sdk/src/: lib.rs  wasi_http.rs  wasi_http_body.rs  wasm_guest.rs
carina-provider-aws/: Cargo.toml
carina-provider-aws/acceptance-tests/: run-tests.sh
carina-provider-aws/scripts/: download-smithy-models.sh  generate-docs.sh  generate-provider.sh  generate-schemas-smithy.sh  generate-schemas.sh
carina-provider-aws/src/: case_convert.rs  ec2_helpers.rs  ec2_security_group_rules.rs  factory.rs  helpers.rs  lib.rs  normalizer.rs  provider.rs  provider_generated.rs  resource_defs.rs  tests.rs
carina-provider-aws/tests/: smithy_models_test.rs
carina-provider-awscc/: Cargo.toml
carina-provider-awscc/acceptance-tests/: run-tests.sh
carina-provider-awscc/scripts/: check-examples.sh  generate-docs.sh  generate-schemas.sh  validate-crn-files.sh
carina-provider-awscc/src/: lib.rs  provider.rs  resources.rs  utils.rs
carina-provider-mock/: Cargo.toml
carina-provider-mock-process/: Cargo.toml
carina-provider-mock-process/src/: main.rs
carina-provider-mock/src/: lib.rs  main.rs
carina-provider-resolver/: Cargo.toml
carina-provider-resolver/src/: lib.rs  provider_resolver.rs  revision_resolver.rs
carina-state/: Cargo.toml
carina-state/src/: backend.rs  backend_lock.rs  lib.rs  lock.rs  state.rs
carina-state/tests/: s3_backend_winterbaume.rs
carina-tui/: Cargo.toml
carina-tui/src/: app.rs  lib.rs  module_info_app.rs  module_info_tui_snapshot_tests.rs  module_info_ui.rs  test_utils.rs  tui_snapshot_tests.rs  ui.rs
(+1150 files in other folders)
