[workspace]
members = [
    "carina-aws-types",
    "carina-cli",
    "carina-core",
    "carina-lsp",
    "carina-plugin-host",
    "carina-plugin-sdk",
    "carina-provider-mock",
    "carina-provider-resolver",
    "carina-provider-protocol",
    "carina-state",
    "carina-tui",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
repository = "https://github.com/carina-rs/carina"
homepage = "https://github.com/carina-rs/carina"
