[package]
name = "carina-aws-types"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "AWS type definitions for Carina infrastructure management tool"
repository = "https://github.com/carina-rs/carina"
homepage = "https://github.com/carina-rs/carina"

[lib]
doctest = false

[dependencies]
carina-core = { path = "../carina-core" }
