[package]
name = "carina-aws-types"
version.workspace = true
edition = "2024"
license = "MIT"
description = "AWS type definitions for Carina infrastructure management tool"
repository.workspace = true
homepage.workspace = true

[lib]
doctest = false

[dependencies]
carina-core = { path = "../carina-core" }
