[package]
name = "carina-cli"
version.workspace = true
edition = "2024"
license = "MIT"
description = "CLI for Carina, a functional infrastructure management tool"
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "carina"
path = "src/main.rs"

[dependencies]
carina-core = { path = "../carina-core" }
carina-plugin-host = { path = "../carina-plugin-host" }
carina-provider-mock = { path = "../carina-provider-mock" }
carina-state = { path = "../carina-state" }
carina-tui = { path = "../carina-tui" }
aws-config = "1"
aws-sdk-kms = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
colored = "3"
flate2 = "1"
indicatif = "0.17"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"
tar = "0.4"
thiserror = "2"
toml = "0.8"
ureq = "3"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

[dev-dependencies]
async-trait = "0.1"
insta = "1"
regex-lite = "0.1"
tempfile = "3"
