[package]
name = "carina-cli"
version.workspace = true
edition = "2024"
license = "MIT"
description = "CLI for Carina, a functional infrastructure management tool"
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "carina"
path = "src/main.rs"

[[example]]
name = "plan-fixture"
path = "examples/plan-fixture.rs"

[dependencies]
carina-core = { path = "../carina-core" }
carina-plugin-host = { path = "../carina-plugin-host" }
carina-provider-mock = { path = "../carina-provider-mock" }
carina-provider-resolver = { path = "../carina-provider-resolver" }
carina-state = { path = "../carina-state" }
carina-tui = { path = "../carina-tui" }
aws-config = "1"
aws-sdk-kms = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
colored = "3"
indexmap = "2"
indicatif = "0.17"
env_logger = "0.11"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
thiserror = "2"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-std", "io-util"] }

[dev-dependencies]
async-trait = "0.1"
carina-lsp = { path = "../carina-lsp" }
insta = "1"
regex-lite = "0.1"
tempfile = "3"
tower-lsp = "0.20"
