[package]
name = "carina-cli"
version.workspace = true
edition = "2024"
license = "MIT"
description = "CLI for Carina, a functional infrastructure management tool"
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "carina"
path = "src/main.rs"

[[example]]
name = "plan-fixture"
path = "examples/plan-fixture.rs"

[dependencies]
carina-core = { path = "../carina-core" }
carina-plugin-host = { path = "../carina-plugin-host" }
carina-provider-mock = { path = "../carina-provider-mock" }
carina-provider-resolver = { path = "../carina-provider-resolver" }
carina-state = { path = "../carina-state" }
carina-tui = { path = "../carina-tui" }
aws-config = "1"
aws-sdk-iam = "1"
aws-sdk-kms = "1"
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
colored = "3"
indexmap = "2"
indicatif = "0.17"
env_logger = "0.11"
# Async-signal-safe SIGINT/SIGTERM handler that restores the terminal cursor
# if a refresh spinner was interrupted (#3153). Already present transitively
# via crossterm, so promoting to a direct dep adds no build cost. `libc` is
# needed for the raw `write(2)` the handler performs (the only
# async-signal-safe way to emit `\x1b[?25h` from a signal context).
signal-hook = "0.3"
libc = "0.2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
thiserror = "2"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-std", "io-util"] }
tokio-util = "0.7"

[dev-dependencies]
async-trait = "0.1"
carina-lsp = { path = "../carina-lsp" }
insta = "1"
# Real PTY for the refresh-separator regression test (#3150). The bug only
# manifests under a TTY (indicatif leaves the last spinner line unterminated);
# a piped-stdout test cannot observe it — which is exactly how #3149 shipped
# the broken fix.
portable-pty = "0.8"
regex-lite = "0.1"
tempfile = "3"
tower-lsp = "0.20"
# In-process AWS service emulator: the KMS decryptor's integration test
# injects a winterbaume-backed KMS client and exercises the real
# base64 → KMS:Decrypt → UTF-8 path with no real AWS and no external
# process (#3227, follow-up to #3206).
winterbaume-core = "0.2"
winterbaume-kms = "0.2.1"
