[package]
name = "carina-core"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Core library for Carina, a functional infrastructure management tool"
repository.workspace = true
homepage.workspace = true

[dependencies]
futures = "0.3"
pest = "2"
pest_derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
