[package]
name = "carina-core"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Core library for Carina, a functional infrastructure management tool"
repository.workspace = true
homepage.workspace = true

[dependencies]
carina-provider-protocol = { path = "../carina-provider-protocol" }
futures = "0.3"
pest = "2"
pest_derive = "2"
regex = "1" # Full regex is required: awscc CFN patterns use \p{...} Unicode classes that regex-lite cannot compile (awscc#295).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
argon2 = "0.5"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
indexmap = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["macros", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tempfile = "3"
