[package]
name = "carina-lsp"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Language Server Protocol implementation for Carina DSL"
repository.workspace = true
homepage.workspace = true

[lib]
name = "carina_lsp"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "carina-lsp"
path = "src/main.rs"

[dependencies]
carina-core = { path = "../carina-core" }
carina-plugin-host = { path = "../carina-plugin-host" }
carina-provider-resolver = { path = "../carina-provider-resolver" }
carina-state = { path = "../carina-state" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
dashmap = "6"
ropey = "1"
pest = "2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
