[package]
name = "carina-plugin-host"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
doctest = false

[dependencies]
carina-core = { path = "../carina-core" }
carina-provider-protocol = { path = "../carina-provider-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
wasmtime = { version = "43", features = ["component-model"] }
wasmtime-wasi = "43"
wasmtime-wasi-http = "43"
hyper = "1"
tokio = { version = "1", features = ["rt"] }
dirs = "6"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
