[package]
name = "carina-plugin-host"
version = "0.4.0"
edition = "2024"
license = "MIT"

[lib]
doctest = false

[dependencies]
carina-core = { path = "../carina-core" }
carina-provider-protocol = { path = "../carina-provider-protocol" }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
wasmtime = { version = "45", features = ["component-model"] }
wasmtime-wasi = "45"
wasmtime-wasi-http = "45"
hyper = "1"
tokio = { version = "1", features = ["rt"] }
# Used by the local phase-instrumented copy of `default_send_request_handler`.
# Versions track wasmtime-wasi-http 43.x so we share the rustls/hyper stack
# instead of forking the TLS/HTTP wire path.
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
rustls = "0.22"
rustls_0_23 = { package = "rustls", version = "0.23", features = ["aws_lc_rs"] }
tokio-rustls = "0.25"
webpki-roots = "0.26"
dirs = "6"
sha2 = "0.10"
indexmap = "2"

[dev-dependencies]
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "server", "tokio"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tempfile = "3"
