[package]
name = "carina-plugin-sdk"
version = "0.4.0"
edition = "2024"
license = "MIT"

[lib]
doctest = false

[dependencies]
carina-provider-protocol = { path = "../carina-provider-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-executor = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = { version = "0.54", default-features = false, features = ["macros", "async"] }
wasi = "0.14"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
aws-smithy-runtime-api = { version = "1", features = ["client", "http-1x"] }
aws-smithy-types = "1"
http = "1"
