[package]
name = "carina-provider-aws"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "aws-codegen"
path = "src/bin/codegen.rs"

[dependencies]
carina-core = { path = "../carina-core" }
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-ec2 = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
heck = "0.5"
regex = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
carina-smithy = { path = "../carina-smithy" }
