[package]
name = "carina-provider-aws"
version.workspace = true
edition = "2024"
license = "MIT"
description = "AWS provider for Carina infrastructure management tool"
repository.workspace = true
homepage.workspace = true

[lib]
doctest = false

[dependencies]
carina-core = { path = "../carina-core" }
carina-aws-types = { path = "../carina-aws-types" }
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-ec2 = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
heck = "0.5"
urlencoding = "2"

[dev-dependencies]
