[package]
name = "carina-provider-awscc"
version.workspace = true
edition = "2024"
license = "MIT"
description = "AWS CloudControl provider for Carina infrastructure management tool"
repository.workspace = true
homepage.workspace = true

[lib]
doctest = false

[[bin]]
name = "carina-provider-awscc"
path = "src/main.rs"

[[bin]]
name = "codegen"
path = "src/bin/codegen.rs"

[dependencies]
carina-core = { path = "../carina-core" }
carina-aws-types = { path = "../carina-aws-types" }
carina-plugin-host = { path = "../carina-plugin-host" }
carina-plugin-sdk = { path = "../carina-plugin-sdk" }
carina-provider-protocol = { path = "../carina-provider-protocol" }
aws-config = "1"
aws-sdk-cloudcontrol = "1"
aws-sdk-s3 = "1"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
heck = "0.5"
regex = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"

[dev-dependencies]
http = "1"
