[package]
name = "carina-provider-mock-process"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "carina-provider-mock-process"
path = "src/main.rs"

[dependencies]
carina-plugin-sdk = { path = "../carina-plugin-sdk" }
carina-provider-protocol = { path = "../carina-provider-protocol" }
serde_json = "1"
