[package]
name = "carina-provider-mock"
version.workspace = true
edition = "2024"
license = "MIT"
publish = false

[lib]
doctest = false

[[bin]]
name = "carina-provider-mock"
path = "src/main.rs"

[dependencies]
carina-core = { path = "../carina-core" }
carina-plugin-sdk = { path = "../carina-plugin-sdk" }
carina-provider-protocol = { path = "../carina-provider-protocol" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
http = "1"
wasi = "0.14"
wit-bindgen = { version = "0.54", default-features = false, features = ["macros", "async"] }
