[package]
name = "carina-provider-resolver"
version.workspace = true
edition = "2024"
license = "MIT"

[lib]
doctest = false

[dependencies]
carina-core = { path = "../carina-core" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"
ureq = "3"
flate2 = "1"
tar = "0.4"
semver = "1"
serde_json = "1"
zip = "2"

[dev-dependencies]
tempfile = "3"
