[package]
name = "carina-state"
version.workspace = true
edition = "2024"
license = "MIT"
description = "State management for Carina infrastructure management tool"
repository.workspace = true
homepage.workspace = true

[lib]
doctest = false

[dependencies]
carina-core = { path = "../carina-core" }
aws-config = "1"
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "2"
hostname = "0.4"

[dev-dependencies]
indexmap = "2"
tempfile = "3"
# In-process AWS service emulator: the S3 backend's integration tests
# inject a winterbaume-backed S3 client and exercise the StateBackend
# I/O path with no real AWS and no external process (#3203).
winterbaume-core = "0.2"
winterbaume-s3 = "0.2"
# Lets the s3.rs unit tests build a real HTTP response (with a status
# code) so the HTTP-status-based not-found classifier can be exercised
# directly.
aws-smithy-runtime-api = { version = "1", features = ["http-1x"] }
aws-smithy-types = "1"
