[package]
name = "carina-tui"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "TUI display for Carina infrastructure management tool"
repository = "https://github.com/carina-rs/carina"
homepage = "https://github.com/carina-rs/carina"

[dependencies]
carina-core = { path = "../carina-core" }
crossterm = "0.28"
ratatui = "0.29"

[dev-dependencies]
insta = "1"
