[package]
name = "carina-tui"
version.workspace = true
edition = "2024"
license = "MIT"
description = "TUI display for Carina infrastructure management tool"
repository.workspace = true
homepage.workspace = true

[dependencies]
carina-core = { path = "../carina-core" }
crossterm = "0.28"
ratatui = "0.29"

[dev-dependencies]
insta = "1"
